# calificar

./: .gitignore  BDT1Enunciados.pkl  BDT1Respuestas.pkl  GenerarTalleres.py  LICENSE  README.md  TALLERES.md  enunciados.json  publicar.bat  pyproject.toml  setup.py
Big_Data/: BDT2Enunciados.pkl  README.md
Big_Data/Parcial_1/: Actividad_Final.xlsx  Tema_1.md  Tema_10.md  Tema_11.md  Tema_12.md  Tema_13.md  Tema_14.md  Tema_15.md  Tema_16.md  Tema_17.md  Tema_18.md  Tema_19.md  Tema_2.md  Tema_20.md  Tema_21.md  Tema_22.md  Tema_23.md  Tema_24.md  Tema_25.md  Tema_26.md  Tema_27.md  Tema_28.md  Tema_29.md  Tema_3.md  Tema_30.md  Tema_4.md  Tema_5.md  Tema_6.md  Tema_7.md  Tema_8.md  Tema_9.md  respuestas.json
Big_Data/Parcial_2/: Tema_1.md  Tema_10.md  Tema_11.md  Tema_12.md  Tema_13.md  Tema_14.md  Tema_15.md  Tema_16.md  Tema_17.md  Tema_18.md  Tema_19.md  Tema_2.md  Tema_20.md  Tema_21.md  Tema_22.md  Tema_23.md  Tema_24.md  Tema_25.md  Tema_26.md  Tema_27.md  Tema_28.md  Tema_29.md  Tema_3.md  Tema_30.md  Tema_4.md  Tema_5.md  Tema_6.md  Tema_7.md  Tema_8.md  Tema_9.md
Big_Data/Taller 1/: Tema_10.md  Tema_11.md  Tema_13.md  Tema_15.md  Tema_16.md  Tema_2.md  Tema_20.md  Tema_21.md  Tema_23.md  Tema_25.md  Tema_28.md  Tema_29.md  Tema_3.md  Tema_30.md  Tema_5.md  Tema_8.md  Tema_9.md
Big_Data/Taller 3/: Tema_10.md  Tema_11.md  Tema_14.md  Tema_15.md  Tema_16.md  Tema_18.md  Tema_2.md  Tema_26.md  Tema_6.md  Tema_8.md  Tema_9.md
Big_Data/Taller 4/: Tema_10.md  Tema_11.md  Tema_15.md  Tema_18.md  Tema_19.md  Tema_26.md  Tema_7.md  Tema_9.md
(+177 files in other folders)
